# hashira

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  app.py  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py  setup.py
llm/: generator.py
parsers/: openapi.py  word.py
templates/: writer.py
tests/: sample_api.yaml  sample_doc.docx
